Fix extra padding in user listing

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -6,4 +6,8 @@
     a { color: inherit; }
     a:hover { text-decoration: none; }
   }
+
+  table .list-unstyled {
+    margin-bottom: 0;
+  }
 }
